src/test/resources/typeSystemTestModels/invalid/expressions/LogicalNot.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class LogicalNot {
  boolean b = !1;
}